# sd-bot

./: Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: cmnds.py  config.py  keyboards.py  main.py  schemas.py  service.py  utils.py
bot/images/: consts.py  enums.py  keyboards.py  models.py  router.py  schemas.py  service.py  states.py  utils.py
bot/index/: keyboards.py  router.py  states.py  utils.py
bot/lora/: keyboards.py  router.py  schemas.py  states.py
bot/settings/: keyboards.py  router.py  states.py  utils.py
